# agentcore-cli

./: CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: e2e-tests.yml  release.yml
docs/: configuration.md
integ-tests/: add-remove-gateway.test.ts
integ-tests/tui/: add-flow.test.ts  create-flow.test.ts  harness.test.ts  setup.ts
src/assets/__tests__/__snapshots__/: assets.snapshot.test.ts.snap
src/assets/cdk/lib/: cdk-stack.ts
src/assets/mcp/python-fastmcp-lambda/: README.md  handler.py  pyproject.toml  run.sh  server.py
src/cli/: cli.ts  exit-codes.ts  index.ts
src/cli/__tests__/: cli.test.ts  exit-codes.test.ts
src/cli/cloudformation/: outputs.ts
src/cli/cloudformation/__tests__/: outputs.test.ts
src/cli/commands/: index.ts
src/cli/commands/add/: actions.ts  command.tsx  types.ts  validate.ts
src/cli/commands/create/: action.ts  command.tsx  types.ts  validate.ts
src/cli/commands/deploy/: actions.ts
src/cli/commands/remove/: actions.ts  command.tsx
src/cli/commands/validate/: action.ts  command.tsx  index.ts
src/cli/operations/deploy/: gateway-status.ts  index.ts  post-deploy-observability.ts  pre-deploy-identity.ts
src/cli/operations/dev/: container-dev-server.ts
src/cli/primitives/: AgentPrimitive.tsx  GatewayPrimitive.ts  GatewayTargetPrimitive.ts
src/cli/templates/: GatewayTargetRenderer.ts  render.ts  types.ts
src/cli/tui/: App.tsx  copy.ts  theme.ts
src/schema/: constants.ts
src/schema/llm-compacted/: mcp.ts
src/schema/schemas/: agent-env.ts  agentcore-project.ts  deployed-state.ts  mcp.ts
(+76 files in other folders)
