[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "FastMCP Server on AWS Lambda"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli] >= 1.2.0",
    "httpx >= 0.27.0",
    "mangum >= 0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
